test/spec_vectors/memory_init64/fail/module_4.wat
(module (func (export "test") (data.drop 0)))